fix wrap text

--- a/src/scss/template-parts/last-news-aside.scss
+++ b/src/scss/template-parts/last-news-aside.scss
@@ -36,6 +36,7 @@
     line-clamp: var(--line-clamp);
     -webkit-line-clamp: var(--line-clamp);
     overflow: hidden;
+    overflow-wrap: anywhere;
 }
 
 /* медиа для aside */
