--- a/src/scss/template-parts/new-card.scss
+++ b/src/scss/template-parts/new-card.scss
@@ -123,7 +123,7 @@
   line-clamp: 3;
   -webkit-line-clamp: 3;
   overflow: hidden;
-  word-break: break-all;
+  overflow-wrap: anywhere;
 }
 
 /* autoprefixer: off */
